tests/error/invalid_array_acces.gw
#! [contains] invalid array access expression
var int[] j;
j[1,2,3,4] => i;
